# Trees

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeCache.txt  CMakeLists.txt  README.md  baseline.f  baseline.f90  check_moisture.py  cmake_install.cmake  constant_variables.mod  define_variables.F90  define_variables.f  define_variables.f90  distribution.F90  distribution.f  distribution.f90  duet.f  duet.f90  duet_inputs.f90  duetio.mod  fillio.mod  fuel_read.F90  fuel_read.f  fuel_read.f90  fuel_variables.mod  fuels_create.F90  fuels_create.f90  grid_variables.mod  infile_variables.mod  io.F90  io.f  io.f90  io_variables.mod  license  main.F90  main.f  main.f90  mainloop.mod  makefile  (+19 more)
DUET/: CMakeLists.txt  FIA_FastFuels_fin_fulllist_populated.txt  MakeFFInputs_DUET.f90  define_variables_DUET.f90  full_DUET.f90  io_DUET.f90  main_DUET.f90  makefile  variables_DUET.f90
Inputs/: AJOSEglinTrees.txt  Chaparral_treelist.txt  Eglin_species.csv  Eglinwind.csv  Flagstaff_treelist.txt  LLM_litter_WG.txt  LLM_litter_trees.txt  MakeFFInputs.f90  TreeTracker.txt  controlFireTec.txt  fuellist  grass.txt  litter.txt  main_DUET.f90  make_topography.py  makefile  newTreelist.txt  treelist.txt  treelisttest.txt  trees  treesGeneral.txt  treesHomogeneous.txt  vis_treesdat_files.py
Inputs/DUET/: define_variables_DUET.f90  makefile  variables_DUET.f90
ModularDUET/: CMakeLists.txt  FIA_FastFuels_fin_fulllist_populated.txt  FastFuels_DUET.F90  FastFuels_DUET.f90  In_DUET.F90  In_DUET.f90  MainLoop_DUET.F90  MainLoop_DUET.f90  Makefile  Out_DUET.F90  Out_DUET.f90  VarRoutines_DUET.F90  VarRoutines_DUET.f90  cmake_install.cmake  support_DUET.f90
Tools/: (Fast Fuels) Appendix A to sp_grp   Apply_Treatments.py  vis_treesdat_files.py
json-fortran/: makefile
